fix: overflow from scroll to auto

--- a/styles/cards.css
+++ b/styles/cards.css
@@ -122,7 +122,7 @@
   }
 
   .cards__description {
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
   }
 }
